[ADD] Se implementaron buenas practicas respecto al tema de autenticacion.