@@ -1,115 +1,282 @@
 package com.alejandro.leadboardbackend.exception;
 
-import com.alejandro.leadboardbackend.dto.ErrorResponseDto;
+import com.alejandro.leadboardbackend.dto.response.ErrorResponseDto;
+import com.alejandro.leadboardbackend.exception.business.*;
+import com.alejandro.leadboardbackend.exception.fileException.FileStorageException;
+import com.alejandro.leadboardbackend.exception.fileException.FileUploadException;
+import com.alejandro.leadboardbackend.exception.fileException.InvalidFileException;
+import org.apache.http.auth.InvalidCredentialsException;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.ErrorResponse;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    // ---------------------
-    // Método utilitario
-    // ---------------------
-    private ErrorResponseDto buildError(
-            ErrorCode errorCode,
-            String message,
-            WebRequest request) {
 
-        ErrorResponseDto error = new ErrorResponseDto(
-                errorCode.getStatus().value(),
-                errorCode.getStatus().getReasonPhrase(),
-                message != null ? message : errorCode.getDefaultMessage(),
-                request.getContextPath()
-        );
-        error.setErrorCode(errorCode.getCode());
-        return error;
-    }
-
-    private String extractPath(WebRequest request) {
-        return request.getDescription(false).replace("uri=", "");
-    }
-
-    // ---------------------
-    // Handlers generales
-    // ---------------------
-
-    @ExceptionHandler(MaxUploadSizeExceededException.class)
-    public ResponseEntity<ErrorResponseDto> handleMaxSizeException(MaxUploadSizeExceededException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.FILE_TOO_LARGE, null, request);
-        return ResponseEntity.status(ErrorCode.FILE_TOO_LARGE.getStatus()).body(error);
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<ErrorResponseDto> handleIllegalArgument(IllegalArgumentException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.INVALID_ARGUMENT, ex.getMessage(), request);
-        return ResponseEntity.status(ErrorCode.INTERNAL_ERROR.getStatus()).body(error);
-    }
-
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErrorResponseDto> handleGlobalException(Exception ex, WebRequest request) {
-
-        ErrorResponseDto error = buildError(ErrorCode.INTERNAL_ERROR, null, request);
-
-        List<String> details = new ArrayList<>();
-        details.add("Ha ocurrido un error interno");
-        error.setDetails(details);
-
-        return ResponseEntity.status(ErrorCode.INTERNAL_ERROR.getStatus()).body(error);
-    }
+    // ==================== VALIDACIÓN ====================
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponseDto> handleValidationErrors(MethodArgumentNotValidException ex, WebRequest request) {
-
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .toList();
+                .collect(Collectors.toList());
 
-        ErrorResponseDto error = buildError(ErrorCode.VALIDATION_ERROR, "Datos invalidos", request);
-        error.setDetails(errors);
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.BAD_REQUEST.value(),
+                HttpStatus.BAD_REQUEST.getReasonPhrase(),
+                "Error de validacion en los datos enviados",
+                getPath(request)
+        );
 
-        return ResponseEntity.badRequest().body(error);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
     }
 
-    // ---------------------
-    // Handlers de negocio
-    // ---------------------
+    @ExceptionHandler(IllegalArgumentException.class)
+    public ResponseEntity<ErrorResponseDto> handleIllegalArgument(
+            IllegalArgumentException ex,
+            WebRequest request) {
 
-    @ExceptionHandler(BusinessException.class)
-    public ResponseEntity<ErrorResponseDto> handleBusinessException(BusinessException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.PROJECT_BUSINESS_ERROR, ex.getMessage(), request);
-        return ResponseEntity.badRequest().body(error);
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.BAD_REQUEST.value(),
+                HttpStatus.BAD_REQUEST.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(errorResponse);
     }
+
+    // ==================== AUTENTICACIÓN (desde Service) ====================
+    @ExceptionHandler(BadCredentialsException.class)
+    public ResponseEntity<ErrorResponseDto> handleBadCredentials(
+            BadCredentialsException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.UNAUTHORIZED.value(),
+                HttpStatus.UNAUTHORIZED.getReasonPhrase(),
+                "Email o contraseña incorrectos",
+                getPath(request)
+        );
+
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(errorResponse);
+    }
+
+    // Estas excepciones SÍ pasan por aquí cuando se lanzan desde el Service
+    @ExceptionHandler(InvalidCredentialsException.class)
+    public ResponseEntity<ErrorResponseDto> handleInvalidCredentials(
+            InvalidCredentialsException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.UNAUTHORIZED.value(),
+                HttpStatus.UNAUTHORIZED.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(errorResponse);
+    }
+
+    @ExceptionHandler(TokenRefreshException.class)
+    public ResponseEntity<ErrorResponseDto> handleTokenRefreshException(
+            TokenRefreshException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.FORBIDDEN.value(),
+                HttpStatus.FORBIDDEN.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(errorResponse);
+    }
+
+
+    // ==================== RECURSOS ====================
 
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<ErrorResponseDto> handleResourceNotFound(ResourceNotFoundException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.PROJECT_NOT_FOUND, ex.getMessage(), request);
-        return ResponseEntity.status(ErrorCode.PROJECT_NOT_FOUND.getStatus()).body(error);
+    public ResponseEntity<ErrorResponseDto> handleResourceNotFound(
+            ResourceNotFoundException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.NOT_FOUND.value(),
+                HttpStatus.NOT_FOUND.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.NOT_FOUND)
+                .body(errorResponse);
     }
 
-    @ExceptionHandler(FileUploadException.class)
-    public ResponseEntity<ErrorResponseDto> handleFileUpload(FileUploadException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.FILE_UPLOAD_ERROR, ex.getMessage(), request);
-        return ResponseEntity.status(ErrorCode.FILE_UPLOAD_ERROR.getStatus()).body(error);
+    // ==================== CONFLICTOS ====================
+
+    @ExceptionHandler(UserAlreadyExistsException.class)
+    public ResponseEntity<ErrorResponseDto> handleUserAlreadyExists(
+            UserAlreadyExistsException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.CONFLICT.value(),
+                HttpStatus.CONFLICT.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.CONFLICT)
+                .body(errorResponse);
+    }
+
+    @ExceptionHandler(DuplicateResourceException.class)
+    public ResponseEntity<ErrorResponseDto> handleDuplicateResource(
+            DuplicateResourceException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.CONFLICT.value(),
+                HttpStatus.CONFLICT.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.CONFLICT)
+                .body(errorResponse);
+    }
+
+    // ==================== ARCHIVOS ====================
+
+    @ExceptionHandler(MaxUploadSizeExceededException.class)
+    public ResponseEntity<ErrorResponseDto> handleMaxSizeException(
+            MaxUploadSizeExceededException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.PAYLOAD_TOO_LARGE.value(),
+                HttpStatus.PAYLOAD_TOO_LARGE.getReasonPhrase(),
+                "El archivo excede el tamaño máximo permitido",
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.PAYLOAD_TOO_LARGE)
+                .body(errorResponse);
     }
 
     @ExceptionHandler(InvalidFileException.class)
-    public ResponseEntity<ErrorResponseDto> handleInvalidFile(InvalidFileException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.INVALID_FILE, ex.getMessage(), request);
-        return ResponseEntity.badRequest().body(error);
+    public ResponseEntity<ErrorResponseDto> handleInvalidFile(
+            InvalidFileException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.BAD_REQUEST.value(),
+                HttpStatus.BAD_REQUEST.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(errorResponse);
     }
 
-    @ExceptionHandler(UserExistsException.class)
-    public ResponseEntity<ErrorResponseDto> handleUserExist(UserExistsException ex, WebRequest request) {
-        ErrorResponseDto error = buildError(ErrorCode.USER_EXIST, ex.getMessage(), request);
-        return ResponseEntity.status(ErrorCode.USER_EXIST.getStatus()).body(error);
+    @ExceptionHandler(FileUploadException.class)
+    public ResponseEntity<ErrorResponseDto> handleFileUpload(
+            FileUploadException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
+                "Error al procesar el archivo: " + ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(errorResponse);
+    }
+
+    @ExceptionHandler(FileStorageException.class)
+    public ResponseEntity<ErrorResponseDto> handleFileStorage(
+            FileStorageException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
+                "Error al almacenar el archivo: " + ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(errorResponse);
+    }
+
+    // ==================== NEGOCIO ====================
+
+    @ExceptionHandler(BusinessException.class)
+    public ResponseEntity<ErrorResponseDto> handleBusinessException(
+            BusinessException ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.BAD_REQUEST.value(),
+                HttpStatus.BAD_REQUEST.getReasonPhrase(),
+                ex.getMessage(),
+                getPath(request)
+        );
+
+        return ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(errorResponse);
+    }
+
+    // ==================== GENÉRICO (ÚLTIMO) ====================
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponseDto> handleGlobalException(
+            Exception ex,
+            WebRequest request) {
+
+        ErrorResponseDto errorResponse = new ErrorResponseDto(
+                HttpStatus.INTERNAL_SERVER_ERROR.value(),
+                HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
+                "Ha ocurrido un error inesperado en el servidor",
+                getPath(request)
+        );
+
+        // En producción, registra el error completo en logs
+        // log.error("Error inesperado", ex);
+
+        return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(errorResponse);
+    }
+
+
+    // ==================== UTILIDADES ====================
+
+    private String getPath(WebRequest request) {
+        return request.getDescription(false).replace("uri=", "");
     }
 }
